完成详细电影界面的开发

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    
+    <string name="share_element_book">element_book</string>
+    <string name="share_element_music">element_music</string>
+    <string name="share_element_movie">element_movie</string>
+
+    <string name="base_movie_url">https://api.douban.com/v2/</string>
 </resources>
